# evidence-seeker

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
configs/: confirmation_analysis_config_default.yaml  preprocessing_config_default.yaml  preprocessing_separate_listings_config.yaml  retrieval_config_default.yaml  simple_confirmation_analysis_config.yaml  simple_preprocessing_config.yaml
docs/: about.html  configuration.html  getting_started.html  imprint.html  index.html  roadmap.html  robots.txt  search.json  sitemap.xml  workflow.html
docs/docs_configuration/: advanced_configuration.html  example_advanced_index_operations.html  example_hf_inference_provider.html  example_local_models.html  minimal_configuration.html
docs/site_libs/bootstrap/: bootstrap-48fbefe780f5a27fc13c67afc8cc4f05.min.css  bootstrap-f698449d828ba46b281046356bba4374.min.css
docs_src/: _quarto.yml  about.qmd  configuration.qmd  getting_started.qmd  imprint.qmd  index.qmd  kideku.scss  roadmap.qmd  styles.css  workflow.qmd
docs_src/docs_configuration/: advanced_configuration.qmd  example_advanced_index_operations.qmd  example_hf_inference_provider.qmd  example_local_models.qmd  minimal_configuration.qmd
docs_src/scripts/: pre-render.sh
locks/: evse-dev_env.py3.11.lock.bak-20250804  evse-dev_env.py3.12.lock.bak-20250630  evse_py312_requirements_v20251010_pip_freeze_lock.txt  req-evidence-seeker.py3.12.v20250811.txt
notebooks/: build_index.ipynb  retriever.ipynb  test_confirmation_analysis.ipynb  test_pipelines.ipynb  test_preprocessing.ipynb  test_whole_pipeline.ipynb  test_whole_pipeline_new.ipynb
src/: ui.py
src/evidence_seeker/: __init__.py  backend.py  confirmation_aggregation.py  confirmation_analysis.py  datamodels.py  evidence_seeker.py  models.py  preprocessing.py  results.py  retrieval.py  utils.py  workflow.py
src/evidence_seeker/cli/: config.py  evse_cli.py
tests/: test_confirmation_analysis_config.py  test_main_entrypoint.py  test_pipelines.ipynb  test_preprocessing_config.py  test_retrieval_config.py
(+20 files in other folders)
