[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-seeker"
dynamic = ["version"]
description = 'EvidenceSeeker Boilerplate'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-dotenv",
  "llama-index",
  "llama-index-llms-openai-like",
  "llama-index-embeddings-text-embeddings-inference==0.3.0",
  "numpy",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/debatelab/evidence-seeker#readme"
Issues = "https://github.com/debatelab/evidence-seeker/issues"
Source = "https://github.com/debatelab/evidence-seeker"

[tool.hatch.version]
path = "src/evidence_seeker/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "jupyter",
  "ipywidgets",
  "llama-index-callbacks-arize-phoenix",
  "llama-index-utils-workflow",
  "wrapt<=1.16.0",
  "pytest",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/evidence_seeker tests}"

[tool.coverage.run]
source_pkgs = ["evidence_seeker", "tests"]
branch = true
parallel = true
omit = [
  "src/evidence_seeker/__about__.py",
]

[tool.coverage.paths]
evidence_seeker = ["src/evidence_seeker", "*/evidence-seeker/src/evidence_seeker"]
tests = ["tests", "*/evidence-seeker/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
